--- a/index.html
+++ b/index.html
@@ -4,32 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/img/icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>Train Ticket</title>
 </head>
 <body>
-    <h1>ciao</h1>
     <div id="example-2" class="container">
-        <div class="row">
-            <div class="col-6">
-                <div class="box">
-                    <h2 id="sale">Offerta</h2>
-                    <h2 id="price">Costo</h2>
+        <div class="row justify-content-end">
+            <div class="col-12">
+                <section class="border  border-primary rounded  bg-primary bg-gradient bg-opacity-75 p-4 shadow-lg my-3">
+                    <p class="fs-1 text-danger-emphasis text-center">Calcola il tuo viaggio</p>
+                    <input type="text" name="passenger" class="form-control mb-2" value="" placeholder="Inserisci il tuo nome">
+                    <input type="text" name="distance" class="form-control mb-2" value="" placeholder="km da percorrere">
+                    <select name="age" class="form-control mb-2" id="" required>
+                        <option value="">-- seleziona una tariffa --</option>
+                        <option value="normal">Babbano</option>
+                        <option value="youngh">Giovane Mago</option>
+                        <option value="senior">Mago Adutlo</option>
+                    </select>
+                    <input type="button" class="btn btn-primary btn-lg btn-outline-dark mt-2" value="Applica">
+                </section>
+            </div>
+                <div class="col-5 my-5">
+                    <section class="border border-primary rounded  bg-primary bg-gradient bg-opacity-75 p-4 shadow-lg text-center">
+                        <p class="fs-1 text-danger-emphasis">Il tuo biglietto</p>
+                        <div class="box fs-3 text-white ">
+                            <p id="name"></p>
+                            <p id="sale"></p>
+                            <p class=" fst-italic">Il prezzo del viaggio è</p>
+                            <p id="price"></p>
+                            <p class="  fst-italic">I km per Hogwarts sono:</p>
+                            <p id="tripLenght"></p>
+                        </div>
+                    </section>
                 </div>
-            </div>
-            <div class="col-6">
-    
-                <input type="text" name="distance" class="form-control mb-2" value="" placeholder="km da percorrere">
-                <select name="age" class="form-control mb-2" id="">
-                    <option value="">-- seleziona esenzione --</option>
-                    <option value="youngh">Minorenne</option>
-                    <option value="senior">Over-65</option>
-                </select>
-                <input type="button" class="btn btn-secondary" value="applica">
-    
-            </div>
         </div>
+    </div>
     <script src="./js/ticket.js"></script>
 </body>
 </html>
